--- a/InformacoesRaster.ipynb
+++ b/InformacoesRaster.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGsJE7f0FF4EicMg3/5Eel",
+      "authorship_tag": "ABX9TyNMxy0z3VF/EAUjGe5PvwjH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -298,6 +298,8 @@
         "    .groupby([\"nome\", \"value\"], as_index=False)\n",
         "    .agg({\"area_ha\": \"sum\"})\n",
         ")\n",
+        "\n",
+        "tabela_area['ano'] = 1985\n",
         "\n",
         "tabela_area"
       ],
