--- a/ReprojetaRasters.ipynb
+++ b/ReprojetaRasters.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXnS29J/bxiAWgJBQ9DAbh",
+      "authorship_tag": "ABX9TyOrR565UAZyWj0SnHWVQ/2D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
         "\n",
         "## Explicação\n",
         "\n",
-        "- Código que pega um bloco de rasters (aqui, com sistemas de coordenadas 4326 WGS 84) e os reprojeta para um CRS desejado (no caso, precisamos de um geográfico para o cálculo da área)"
+        "- Código que pega um bloco de rasters (aqui, com sistemas de coordenadas 4326 WGS 84) e os reprojeta para um CRS desejado (no caso, precisamos de um projetado para o cálculo da área)"
       ],
       "metadata": {
         "id": "JeGEBgOfoXum"
